Fixed Production Build
Added:
+ "use client" to ImageHandler Component (production build refuses to build without it).

Removed:
- Redundant "title" and "text" classes from "ImageViewer.module.css."

Changed:
= Wrapped images in Portfolio with a div (to add a little border and box shadow to the images).
= Portfolio's Image's Width from "auto" to "fit-content" (this prevents the border and box-shadow from overflowing).
= <ImageHandler/> props to take directly from Portfolio Page's props instead of through a function (production refused to build if this wasn't the case).

--- a/src/styles/ImageViewer.module.css
+++ b/src/styles/ImageViewer.module.css
@@ -11,14 +11,3 @@
   align-items: center;
   justify-content: center;
 }
-
-.title {
-  color: #686868;
-  margin: 0;
-  padding-bottom: 10px;
-  text-shadow: 2px 3px rgba(46, 0, 107, 0.178);
-}
-.text {
-  color: #686868;
-  margin: 0;
-}
